# LaRA-VLA

./: .gitignore  =11  PROJECT_EXPLANATION.md  README.md  demo_sh.txt  download_cliprt_modified_libero_hdf5.py  download_lara_vla_libero.py  pyproject.toml  pyrightconfig.json  requirements.txt
deployment/model_server/: server_policy.py
docs/: THIRD_PARTY_NOTICES.md  config_and_training_cleanup_plan.md  open_source_release_schedule.md  rename_starvla_to_laravla_plan.md
examples/LIBERO/: README.md  eval_libero.py  eval_libero_all.sh  model2libero_interface.py  run_all_ckpts_libero_all.sh
examples/SimplerEnv/: README.md  bridge_eval.sh  custom_argparse.py  model2simpler_interface.py  run_all_ckpts_bridge.sh  start_simpler_env.py  test_your_simplerEnv.py
lara_vla/data/: spatial_cot_dataset.py  spatial_lara_libero_dataset.py
laravla/data/: spatial_target_builder.py
laravla/dataloader/: __init__.py  lerobot_datasets.py  spatial_cot_libero.py
laravla/model/: tools.py
laravla/training/: train.py
scripts/: audit_libero10_all_tasks.py  audit_task4_subtasks.py  bridge_stage1a_to_laravla.py  build_transition_index.py  eval_p2_nomask_rollout.py  eval_p2_rollout.py  fix_cot_text_v3.py  fix_subtask_boundaries.py  fix_subtask_boundaries_v2.py  fix_subtask_boundaries_v3.py  host_env.sh  make_mask_videos.py  make_ppt_viz_task4.py  rebuild_noop_suite.py  regenerate_suite_indices.py  run_bridge_multistage.sh  run_laravla_bridge.sh  run_laravla_libero.sh  run_libero_multistage.sh  run_stage1_server.sh  run_stage1a_server.sh  server_env.sh  stage1_cot_train.py  test_explicit_cot_branch.py  test_task4_mask.py  train_p1_latent_transition.py  train_p1_nomask.py  train_p2_nomask.py  train_p2_transition_action.py  train_spatial_action.py  train_stage1_cot.py  viz_p1_predictions.py
tools/: add_tau_future_idx.py  build_fixed_manifest.py  check_spatial_lara_dataset.py  convert_clean_p1_to_backbone.py  debug_latent_slots.py  debug_p2_p1_parity.py  inspect_libero_env.py  test_build_dataloader_spatial_cot.py  test_predict_action_with_mask.py  test_spatial_cot_loader.py  test_spatial_lara_loader.py  test_transition_module.py  verify_alignment.py  verify_dino_gradients.py  visualize_dynamic_mask.py
(+41 files in other folders)
